--- a/VideoTranscriberApp.BlazorUI/VideoTranscriberApp.BlazorUI/Components/Pages/Weather.razor
+++ b/VideoTranscriberApp.BlazorUI/VideoTranscriberApp.BlazorUI/Components/Pages/Weather.razor
@@ -1,64 +1,18 @@
 ﻿@page "/weather"
+@using VideoTranscriberApp.BlazorUI.Client.Components
+@using VideoTranscriberApp.BlazorUI.Client.Enums
 @attribute [StreamRendering]
 
 <PageTitle>Weather</PageTitle>
 
-<h1>Weather</h1>
+<DaisyButton Style="@ButtonStyle.Primary" Text="btn" />
+<DaisyButton Style="@ButtonStyle.Secondary" Text="btn" />
+<DaisyButton Style="@ButtonStyle.Neutral" Text="btn"/>
+<DaisyButton Style="@ButtonStyle.Accent" Text="btn"/>
+<DaisyButton Style="@ButtonStyle.Error" Text="btn"/>
 
-<p>This component demonstrates showing data.</p>
 
-@if (forecasts == null)
-{
-    <p><em>Loading...</em></p>
-}
-else
-{
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var forecast in forecasts)
-            {
-                <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
-                </tr>
-            }
-        </tbody>
-    </table>
-}
-
-@code {
-    private WeatherForecast[]? forecasts;
-
-    protected override async Task OnInitializedAsync()
-    {
-        // Simulate asynchronous loading to demonstrate streaming rendering
-        await Task.Delay(500);
-
-        var startDate = DateOnly.FromDateTime(DateTime.Now);
-        var summaries = new[] { "Freezing", "Bracing", "Chilly", "Cool", "Mild", "Warm", "Balmy", "Hot", "Sweltering", "Scorching" };
-        forecasts = Enumerable.Range(1, 5).Select(index => new WeatherForecast
-        {
-            Date = startDate.AddDays(index),
-            TemperatureC = Random.Shared.Next(-20, 55),
-            Summary = summaries[Random.Shared.Next(summaries.Length)]
-        }).ToArray();
-    }
-
-    private class WeatherForecast
-    {
-        public DateOnly Date { get; set; }
-        public int TemperatureC { get; set; }
-        public string? Summary { get; set; }
-        public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
-    }
-}
+<DaisyButton Style="@ButtonStyle.Primary" Size="ButtonSize.ExtraSmall" Text="btn"/>
+<DaisyButton Style="@ButtonStyle.Secondary" Size="ButtonSize.Small" Text="btn"/>
+<DaisyButton Style="@ButtonStyle.Neutral"  Size="ButtonSize.Medium" Text="btn"/>
+<DaisyButton Style="@ButtonStyle.Accent" Size="ButtonSize.Large" Text="btn"/>
