--- a/VideoTranscriberApp.BlazorUI/VideoTranscriberApp.BlazorUI.Client/Pages/WasmTranscribe.razor
+++ b/VideoTranscriberApp.BlazorUI/VideoTranscriberApp.BlazorUI.Client/Pages/WasmTranscribe.razor
@@ -1,11 +1,8 @@
-﻿@page "/transcribe"
-
-
-@using System.Collections
+﻿@page "/wasm-transcribe"
 @using System.ComponentModel.DataAnnotations
-@using System.Text.Json
 @using VideoTranscriberApp.BlazorUI.Client.Enums
-@using VideoTranscriberApp.BlazorUI.Models
+@using VideoTranscriberApp.BlazorUI.Client.Components
+@rendermode InteractiveWebAssembly
 
 @inject HttpClient HttpClient
 
@@ -16,7 +13,7 @@
         <div class="card-body">
             <h2 class="card-title mb-4">Upload Video</h2>
 
-            <EditForm Model="@model" enctype="multipart/form-data" Enhance method="post" OnValidSubmit="UploadVideo" FormName="transcribe-form">
+            <EditForm Model="@model" OnValidSubmit="UploadVideo">
                 <DataAnnotationsValidator />
                 <ValidationSummary />
 
@@ -38,11 +35,11 @@
                     <label class="label">
                         <span class="label-text">Choose a video file</span>
                     </label>
-                    <InputFile name="model.VideoFile" class="file-input file-input-bordered w-full max-w-xs" accept="video/*"/>
+                    <InputFile OnChange="OnFileSelected" class="file-input file-input-bordered w-full max-w-xs" accept="video/*" max="" />
                     <ValidationMessage For="@(() => model.VideoFile)" />
                 </div>
                 
-                <DaisyButton Type="submit" Style="@ButtonStyle.Success" Text="Upload and Transcribe" CssClass="w-full" />
+                <DaisyButton IsDisabled="@(!model.IsFileSelected || IsUploading)" Type="submit" Style="@ButtonStyle.Info" Text="Upload and Transcribe" CssClass="w-full" />
             </EditForm>
 
             @if (!string.IsNullOrEmpty(ErrorMessage))
@@ -81,20 +78,22 @@
 </div>
 
 @code {
-
-    [SupplyParameterFromForm(FormName = "transcribe-form")]
-    private VideoUploadModel model { get; set; } = new();
+    private VideoUploadModel model = new VideoUploadModel();
     private static List<string> Languages { get; set; } = ["English", "Spanish", "French", "German", "Italian", "Portuguese", "Russian", "Chinese", "Japanese", "Korean", "Turkish"];
     private bool IsUploading { get; set; } = false;
     private string ErrorMessage { get; set; } = string.Empty;
     private string SuccessMessage { get; set; } = string.Empty;
     private List<TranscriptionModel> Transcriptions { get; set; } = [];
 
+    private void OnFileSelected(InputFileChangeEventArgs e)
+    {
+        model.VideoFile = e.File;
+        model.IsFileSelected = true;
+    }
+
     private async Task UploadVideo()
     {
-        Console.WriteLine(JsonSerializer.Serialize(model));
-
-        if (model.VideoFile is null || string.IsNullOrEmpty(model.VideoFile.FileName) || model.SelectedLanguages is null || !model.SelectedLanguages.Any())
+        if (!model.IsFileSelected || !model.SelectedLanguages.Any())
         {
             ErrorMessage = "Please select a file and at least one language.";
             return;
@@ -107,8 +106,8 @@
         try
         {
             var content = new MultipartFormDataContent();
-            var fileContent = new StreamContent(model.VideoFile.OpenReadStream());
-            content.Add(fileContent, "video", model.VideoFile.FileName);
+            var fileContent = new StreamContent(model.VideoFile.OpenReadStream(50000000));
+            content.Add(fileContent, "video", model.VideoFile.Name);
 
             foreach (var language in model.SelectedLanguages)
             {
@@ -141,12 +140,18 @@
     public class VideoUploadModel
     {
         [Required(ErrorMessage = "Please select a video file.")]
-        [DataType(DataType.Upload)]
-        public IFormFile VideoFile { get; set; }
+        public IBrowserFile VideoFile { get; set; }
 
         [Required(ErrorMessage = "Please select at least one language.")]
-        public string[] SelectedLanguages { get; set; } = new string[25];
+        [MinLength(1, ErrorMessage = "Please select at least one language.")]
+        public string[] SelectedLanguages { get; set; } = new string[Languages.Count + 1];
+
+        public bool IsFileSelected { get; set; } = false;
     }
 
-
+    public class TranscriptionModel
+    {
+        public string Language { get; set; }
+        public string Text { get; set; }
+    }
 }
