--- a/VideoTranscriberApp.BlazorUI/VideoTranscriberApp.BlazorUI/Components/Pages/Transcribe.razor
+++ b/VideoTranscriberApp.BlazorUI/VideoTranscriberApp.BlazorUI/Components/Pages/Transcribe.razor
@@ -4,6 +4,7 @@
 @using System.Collections
 @using System.ComponentModel.DataAnnotations
 @using System.Text.Json
+@using VideoTranscriberApp.BlazorUI.Client.Components
 @using VideoTranscriberApp.BlazorUI.Client.Enums
 @using VideoTranscriberApp.BlazorUI.Models
 @using VideoTranscriberApp.BlazorUI.Services
