--- a/VideoTranscriberApp.BlazorUI/VideoTranscriberApp.BlazorUI.Client/Pages/WasmTranscribe.razor
+++ b/VideoTranscriberApp.BlazorUI/VideoTranscriberApp.BlazorUI.Client/Pages/WasmTranscribe.razor
@@ -2,6 +2,7 @@
 @using System.ComponentModel.DataAnnotations
 @using VideoTranscriberApp.BlazorUI.Client.Enums
 @using VideoTranscriberApp.BlazorUI.Client.Components
+@using VideoTranscriberApp.BlazorUI.Client.Models
 @rendermode InteractiveWebAssembly
 
 @inject HttpClient HttpClient
